--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -150,7 +150,7 @@
     line-height: 110px;
     border-radius: 50%;
     font-size: 30px;
-    background: #2196f3;
+    background: #3C4CA0;
     color: white;
     float: left;
     margin-right: 10px;
