--- a/templates/part/footer.twig
+++ b/templates/part/footer.twig
@@ -112,7 +112,7 @@
 
         </div>
         <div class="right tar">
-            Site-ul este OpenSource.<br>Pentru contribuire, bug-uri, etc, avem <a href="#">repository aici</a>.<br>
+            Site-ul este OpenSource.<br>Pentru contribuire, bug-uri, etc, avem <a href="https://github.com/artur99/nicugane">repository aici</a>.<br>
 
         </div>
         <div class="clear"></div>
