--- a/templates/activitate.twig
+++ b/templates/activitate.twig
@@ -12,6 +12,8 @@
             <span class="bcnav">
                 <a href="{{l('/')}}">CNNG</a>
                 <i class="material-icons">&#xE315;</i>
+                <a href="{{l('/activitati')}}">Activități</a>
+                <i class="material-icons">&#xE315;</i>
                 <a href="#">{{title}}</a>
             </span>
         </div>
@@ -19,13 +21,17 @@
     <div class="thepage">
         <div class="cin">
             <div class="thecontent">
-                {% include 'pages/'~staticpage~'.twig' %}
+                {% if activ.image %}
+                    <img src="{{activ.image}}" alt="" class="cover1">
+                {% endif %}
+                
             </div>
             {% include 'part/sidebar.twig' %}
         </div>
     </div>
 
     {% include 'part/footer.twig' %}
+
     {% include 'part/scripts.twig' %}
 </body>
 </html>
