--- a/templates/landing.twig
+++ b/templates/landing.twig
@@ -24,45 +24,45 @@
             <h2 class="subtitle">Anunțuri</h2>
             <div class="lines"></div>
             <div class="news">
-                <a href="#" class="newsitem z-depth-1">
-                    <div class="news-header" style="background-image:url('http://www.ziuaconstanta.ro/images/stories/2016/01/08/Loredana/evaluare-nationala.jpg')"></div>
-                    <div class="news-cont">
+                <a href="#" class="crlistitem  light-effect-p z-depth-1">
+                    <div class="crlist-header light-effect" style="background-image:url('http://www.ziuaconstanta.ro/images/stories/2016/01/08/Loredana/evaluare-nationala.jpg')"></div>
+                    <div class="crlist-cont">
                         <h3>Desfășurare Evaluare Națională 2016</h3>
                         <div>
                             <p>Ordinul privind organizarea și desfășurarea evaluării naționale pentru absolvenții clasei a VIII-a în...</p>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="newsitem z-depth-1">
-                    <div class="news-header" style="background-image:url('http://media.stiripesurse.ro/image/201409/w800/bac.jpg')"></div>
-                    <div class="news-cont">
+                <a href="#" class="crlistitem  light-effect-p z-depth-1">
+                    <div class="crlist-header light-effect" style="background-image:url('http://media.stiripesurse.ro/image/201409/w800/bac.jpg')"></div>
+                    <div class="crlist-cont">
                         <h3>Desfășurare Examen Bacalaureat 2016</h3>
                         <div>
                             <p>Ordinul privind organizarea și desfășurarea examenului de bacalaureat 2016</p>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="newsitem z-depth-1">
-                    <div class="news-header" style="background-image:url('/assets/img/cover.jpg')"></div>
-                    <div class="news-cont">
+                <a href="#" class="crlistitem  light-effect-p z-depth-1">
+                    <div class="crlist-header light-effect" style="background-image:url('/assets/img/cover.jpg')"></div>
+                    <div class="crlist-cont">
                         <h3>Structura anului școlar 2015-2016</h3>
                         <div>
                             <p>Structura completă a anului școlar 2015-2016</p>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="newsitem z-depth-1">
-                    <div class="news-header" style="background-image:url('http://www.europarl.hr/resource/static/images/epio_euroscola-2016_background.jpg')"></div>
-                    <div class="news-cont">
+                <a href="#" class="crlistitem  light-effect-p z-depth-1">
+                    <div class="crlist-header light-effect" style="background-image:url('http://www.europarl.hr/resource/static/images/epio_euroscola-2016_background.jpg')"></div>
+                    <div class="crlist-cont">
                         <h3>Euroscola 2015</h3>
                         <div>
                             <p>Concursul National Euroscola 2015</p>
                         </div>
                     </div>
                 </a>
-                <a href="#" class="newsitem z-depth-1">
-                    <div class="news-header" style="background-image:url('http://image.prntscr.com/image/ce2f03c8612a4aacbe01e09ee5977458.png')"></div>
-                    <div class="news-cont">
+                <a href="#" class="crlistitem  light-effect-p z-depth-1">
+                    <div class="crlist-header light-effect" style="background-image:url('http://image.prntscr.com/image/ce2f03c8612a4aacbe01e09ee5977458.png')"></div>
+                    <div class="crlist-cont">
                         <h3>Update la site-ul liceului</h3>
                         <div>
                             <p>Site-ul liceului a primit recent un update la interfață și structură...</p>
