--- a/templates/part/footer.twig
+++ b/templates/part/footer.twig
@@ -12,28 +12,28 @@
             <div class="footerinner 2split">
                 <div class="linklist">
                     <a href="{{l('/')}}">Pagina Principală</a>
-                    <a href="aaa">Avizier</a>
-                    <a href="{{l('/')}}">Despre noi</a>
-                    <a href="{{l('/')}}">Oferta Educațională</a>
-                    <a href="aaa">Istoric</a>
-                    <a href="aaa">Profesori</a>
-                    <a href="aaa">Galerie Media</a>
+                    <a href="http://avizier.nicugane.ro">Avizier</a>
+                    <a href="{{l('/despre-noi')}}">Despre noi</a>
+                    <a href="{{l('/oferta-educationala')}}">Oferta Educațională</a>
+                    <a href="{{l('/istoric')}}">Istoric</a>
+                    <a href="{{l('/profesori')}}">Profesori</a>
+                    <a href="{{l('/galerie')}}">Galerie Media</a>
                     <a href="aaa">Activități</a>
                     <a href="aaa">Evenimente</a>
                     <a href="aaa">Catedre</a>
-                    <a href="aaa">Contact</a>
+                    <a href="{{l('/contact')}}">Contact</a>
                 </div>
                 <div class="linklist">
-                    <a href="aaa">Contul meu</a>
-                    <a href="aaa">Pagina Religioasă</a>
-                    <a href="aaa">Sindicat</a>
-                    <a href="aaa">Carte de oaspeți</a>
+                    <a href="{{l('/cont')}}">Contul meu</a>
+                    <a href="http://nicugane.ro/lumina/">Pagina Religioasă</a>
+                    <a href="http://sindicat.nicugane.ro/">Sindicat</a>
+                    <a href="http://www.nicugane.ro/articole/phpguestbook/">Carte de oaspeți</a>
                     <a href="aaa">Revista Liceului</a>
-                    <a href="aaa">CrossingBorders</a>
+                    <a href="http://crossing-borders.nicugane.ro/">CrossingBorders</a>
                     <a href="aaa">Bibliotecă</a>
                     <a href="aaa">APCNNGF</a>
                     <a href="aaa">Linkuri Utile</a>
-                    <a href="aaa">Profesori</a>
+                    <a href="{{l('/profesori')}}">Profesori</a>
                 </div>
             </div>
         </div>
@@ -54,10 +54,11 @@
                 </p>
                 <p>
                     <i class="material-icons">&#xE0BE;</i>
-                    nicu_gane@yahoo.com
+                    <!-- nicu_gane@yahoo.com -->
+                    secretariat@nicugane.ro
                 </p>
                 <p>
-                    <a href="#" class="smallbtn btn1">Pagina de contact</a>
+                    <a href="{{l('/contact')}}" class="smallbtn btn1">Pagina de contact</a>
                 </p>
             </div>
         </div>
@@ -113,7 +114,6 @@
         </div>
         <div class="right tar">
             Site-ul este OpenSource.<br>Pentru contribuire, bug-uri, etc, avem <a href="https://github.com/artur99/nicugane">repository aici</a>.<br>
-
         </div>
         <div class="clear"></div>
     </div>
