--- a/templates/part/sidebar.twig
+++ b/templates/part/sidebar.twig
@@ -2,7 +2,7 @@
     <div class="sideitem">
         <h3>Contul meu</h3><div class="sidel"></div>
         <div class="sidein">
-            <p class="placeholder">Nu sunteți autentificat...<br><a href="{{l('/contul-meu')}}">Contul meu</a></p>
+            <p class="placeholder">Nu sunteți autentificat...<br><a href="{{l('/cont')}}">Contul meu</a></p>
         </div>
     </div>
     <div class="sideitem">
