--- a/templates/part/header.twig
+++ b/templates/part/header.twig
@@ -22,7 +22,7 @@
             <div class="menuitm"><a href="http://avizier.nicugane.ro">Avizier</a></div>
             <div class="menuitm{{mact('/activitati')}}"><a href="{{l('/activitati')}}">Activități</a></div>
             <div class="menuitm{{mact('/evenimente')}}"><a href="{{l('/evenimente')}}">Evenimente</a></div>
-            <div class="menuitm"><a href="#">Catedre</a></div>
+            <div class="menuitm{{mact('/catedre')}}"><a href="{{l('/catedre')}}">Catedre</a></div>
             <div class="menuitm{{mact('/contact')}}"><a href="{{l('/contact')}}">Contact</a></div>
         </div>
         <div class="mobilemenu">
@@ -41,7 +41,7 @@
                 <a href="http://avizier.nicugane.ro">Avizier</a>
                 <a href="{{l('/activitati')}}" {{mact2('/activitati')|raw}}>Activități</a>
                 <a href="{{l('/evenimente')}}" {{mact2('/evenimente')|raw}}>Evenimente</a>
-                <a href="#">Catedre</a>
+                <a href="{{l('/catedre')}}" {{mact2('/catedre')|raw}}>Catedre</a>
                 <a href="{{l('/contact')}}" {{mact2('/contact')|raw}}>Contact</a>
                 <a href="{{l('/profesori')}}" {{mact2('/profesori')|raw}}>Profesori</a>
                 <a href="{{l('/cont')}}" {{mact2('/cont')|raw}}>Contul meu</a>
