--- a/src/css/main.css
+++ b/src/css/main.css
@@ -470,7 +470,7 @@ html,body{
     margin-right: 4px;
 }
 .header{
-    height: 120px;
+    min-height: 120px;
     width: 100%;
     display: block;
     background: url('../img/cover.jpg');
@@ -482,21 +482,28 @@ html,body{
 }
 .header .headerin{
     background: rgba(0,0,0,.6);
+    min-height: 120px;
     width: 100%;
     height: 100%;
 }
 .header h1{
+    display: block;
+    max-width: 650px;
     font-size: 34px;
     text-transform: uppercase;
     font-weight: bold;
     line-height: 36px;
     color: white;
-    margin: 0;
+    margin: 0 auto;
     padding: 31px 5px;
     padding-bottom: 10px;
 }
 .header .bcnav, .header .bcnav a{
     color: white;
+}
+.header .bcnav{
+    margin-bottom: 10px;
+    display: block;
 }
 .header .bcnav i{
     line-height: 16px;
@@ -694,6 +701,7 @@ html,body{
 }
 .cover1{
     max-width: 95%;
+    max-height: 500px;
     display: block;
     margin: auto;
 }
