--- a/src/css/profs.css
+++ b/src/css/profs.css
@@ -30,6 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 3px;
 }
 @media(max-width: 860px){
     .proflist .profitem{
