--- a/src/css/profs.css
+++ b/src/css/profs.css
@@ -16,10 +16,11 @@
     width: 100%;
     height: 200px;
     display: block;
-    background-image: url('../img/cover.jpg');
+    background-image: url('../img/unknown.png');
     background-size: cover;
     background-position: center center;
     position: relative;
+    background-position-y: top;
 }
 .proflist .prof-cont{
     height: 100px;
@@ -64,6 +65,7 @@
     content: ' -';
 }
 .profilepic{
+    background-image: url('../img/unknown.png');
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -71,6 +73,7 @@
     height: 200px;
     max-width: 95%;
     display: block;
-    border-radius: 100%;
+    border-radius: 0;
     margin: 0 30px;
+    background-position-y: top;
 }
