--- a/templates/profesori.twig
+++ b/templates/profesori.twig
@@ -23,7 +23,7 @@
             <div class="lines"></div>
             {% for prof in profs %}
                 <a href="{{l('/profesori/'~prof.id~'-'~(prof.name|slugify))}}" class="profitem light-effect-p z-depth-1">
-                    <div class="prof-header light-effect" style="background-image:url('{{asset('img/profile/'~prof.img)}}')"></div>
+                    <div class="prof-header light-effect" style="{{prof.img?'background-image:url(\''~asset('img/profile/'~prof.img)~'\')'}}"></div>
                     <div class="prof-cont">
                         <div>
                             <h5>{{prof.data.statut}}</h5>
