🌇 Fix la UI formular contact

--- a/templates/pages/contact.twig
+++ b/templates/pages/contact.twig
@@ -9,11 +9,11 @@
 <h2>Formular de contact</h2><br>
 <form action="" method="POST" id="form_contact" class="row">
     <div class="input-field col m6 s12">
-        <input placeholder="" id="inp_email" type="email" name="email" required>
+        <input id="inp_email" type="email" name="email" required>
         <label for="inp_email">Adresa de Email</label>
     </div>
     <div class="input-field col m6 s12">
-        <input placeholder="" id="inp_subject" type="text" name="subject" required>
+        <input id="inp_subject" type="text" name="subject" required>
         <label for="inp_subject">Subiectul</label>
     </div>
     <div class="input-field col s12">
