--- a/src/css/main.css
+++ b/src/css/main.css
@@ -564,6 +564,11 @@ html,body{
     font-weight: bold;
     margin-bottom: 13px;
 }
+.thepage .thecontent h2.tinyh2{
+    font-size: 28px;
+    font-weight: normal;
+    margin-bottom: 23px;
+}
 .thepage .thecontent h2:after{
     content: '';
     display: block;
