--- a/templates/cont.twig
+++ b/templates/cont.twig
@@ -25,11 +25,11 @@
 
                         <form action="" method="POST" id="form_login">
                             <div class="input-field">
-                                <input id="sin_email" type="email" name="email" required>
+                                <input id="sin_email" type="email" name="email" autocomplete="off" required>
                                 <label for="sin_email">Adresa de Email</label>
                             </div>
                             <div class="input-field">
-                                <input id="sin_pass" type="password" name="pass" required>
+                                <input id="sin_pass" type="password" name="password" autocomplete="off" required>
                                 <label for="sin_pass">Parola</label>
                             </div>
                             <!-- <div class="input-field">
