--- a/src/css/account.css
+++ b/src/css/account.css
@@ -5,6 +5,12 @@
     padding: 20px;
     padding-top: 12vh;
 }
+.sec.account .card{
+    text-align: left;
+}
+.sec.account .card-content strong{
+    font-weight: bold;
+}
 @media(max-width: 700px){
     .row .loginbox{
         flex: 100%;
