--- a/src/css/main.css
+++ b/src/css/main.css
@@ -571,12 +571,15 @@ html,body{
     font-weight: bold;
     margin-bottom: 13px;
 }
-.thepage .thecontent h2.tinyh2{
+.thepage .thecontent h2.tinyh2, .sec h2.tinyh2{
+    text-align: left;
+    margin: 6px 4px;
+    font-family: Raleway, 'Open Sans', sans-serif;
     font-size: 28px;
     font-weight: normal;
     margin-bottom: 23px;
 }
-.thepage .thecontent h2:after{
+.thepage .thecontent h2:after, .thepage .thecontent h2.tinyh2:after, .sec h2.tinyh2:after{
     content: '';
     display: block;
     width: 150px;
@@ -669,7 +672,9 @@ html,body{
     line-height: 19px;
 }
 /* Codul pentru carduri */
-
+.crlist{
+    text-align: center;
+}
 .crlistitem{
     display: inline-block;
     width: 30%;
@@ -716,6 +721,9 @@ html,body{
     max-height: 500px;
     display: block;
     margin: auto;
+}
+.cardgroup1{
+
 }
 @media(max-width: 870px){
     .crlistitem{
