--- a/templates/part/scripts.twig
+++ b/templates/part/scripts.twig
@@ -1,5 +1,7 @@
 <script type="text/javascript">
     var csrftoken = '{{csrftoken('main')}}';
     var currenturl = '{{app.request.attributes.get('_route')|trim('_')}}';
+    var requesturi = '{{app.request.requestUri}}';
+
 </script>
 <script src="{{asset('components/data.js')}}"></script>
