--- a/templates/part/footer.twig
+++ b/templates/part/footer.twig
@@ -113,7 +113,7 @@
 
         </div>
         <div class="right tar">
-            Site-ul este OpenSource.<br>Pentru contribuire, bug-uri, etc, avem <a href="https://github.com/artur99/nicugane">repository aici</a>.<br>
+            Site-ul este OpenSource.<br>Pentru contribuire, bug-uri, etc, avem <a href="https://github.com/artur99/nicugane" target="_blank">repository aici</a>.<br>
         </div>
         <div class="clear"></div>
     </div>
