--- a/templates/activitate.twig
+++ b/templates/activitate.twig
@@ -20,7 +20,7 @@
     </div>
     <div class="thepage">
         <div class="cin">
-            <div class="thecontent">
+            <div class="thecontent card">
                 {% if activ.image %}
                     <img src="{{activ.image}}" alt="" class="cover1">
                 {% endif %}
