--- a/templates/cont.twig
+++ b/templates/cont.twig
@@ -18,7 +18,7 @@
     </div>
     <div class="thepage">
         <div class="cin">
-            <div class="thecontent">
+            <div class="thecontent card">
                 <div class="row">
                     <div class="col l6 m12">
                         <h2 class="tinyh2">Accesare cont</h2>
