--- a/templates/part/footer.twig
+++ b/templates/part/footer.twig
@@ -108,7 +108,7 @@
     <div class="cin">
         <div class="left">
             Web design/web development: Vultur David;<br>
-            Media: Vultur Iulian, Vodă Georgian;<br>
+            Media: Vultur Iulian;<br>
             <a href="#">Vezi întreaga echipă</a><br>
 
         </div>
