--- a/templates/profesor.twig
+++ b/templates/profesor.twig
@@ -20,7 +20,7 @@
     </div>
     <div class="thepage">
         <div class="cin">
-            <div class="thecontent">
+            <div class="thecontent card">
                 <div class="profilepic right" style="background-image:url('{{asset('img/profile/'~prof.img)}}')"></div>
                 <h2>{{title}}</h2>
                 <p class="n">{{prof.name}} - {{prof.data.statut}} la {{app['conf.title']}}.</p>
