--- a/templates/static.twig
+++ b/templates/static.twig
@@ -18,7 +18,7 @@
     </div>
     <div class="thepage">
         <div class="cin">
-            <div class="thecontent">
+            <div class="thecontent card">
                 {% include 'pages/'~staticpage~'.twig' %}
             </div>
             {% include 'part/sidebar.twig' %}
